<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".activities.ShowScoreFragment">

    <LinearLayout
        android:id="@+id/title_section"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/stats_section">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="90sp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/game_over_text"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/game_end_reason"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:text="No more cards!"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/stats_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/button_section"
        app:layout_constraintTop_toBottomOf="@id/title_section">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/game_stats_text"
            android:textColor="@color/white"/>
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_weight="1"
                android:text="@string/final_winnings_text"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:textAlignment="center"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/final_winnings"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textAlignment="textStart"
                android:text="12345"
                android:layout_width="50dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_weight="1"
                android:text="@string/cards_played_text"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:textAlignment="center"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/cards_played"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textAlignment="textStart"
                android:text="104"
                android:layout_width="50dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_weight="1"
                android:text="@string/hands_played_text"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:textAlignment="center"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/hands_played"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textAlignment="textStart"
                android:text="12345"
                android:layout_width="50dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_weight="1"
                android:text="@string/winnings_pr_hand_text"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:textAlignment="center"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/wins_pr_hand"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textAlignment="textStart"
                android:text="12345"
                android:layout_width="50dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
        
        

        

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_section"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stats_section">

        <Button
            android:id="@+id/replay_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/main_menu_button"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/play_again_button_text" />

        <Button
            android:id="@+id/main_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintStart_toEndOf="@id/replay_game_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/main_menu_button_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>