<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:theme="@style/ThemeOverlay.Blackjack.FullscreenContainer"
    tools:context=".activities.GameFragment">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.25"
            android:gravity="center"
            android:text="Dealer Cards"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/dealer_cards_layout"
            app:layout_constraintBottom_toBottomOf="@id/dealer_cards_layout"
            app:layout_constraintStart_toStartOf="@id/dealer_cards_layout"
            app:layout_constraintEnd_toEndOf="@id/dealer_cards_layout"
            app:layout_constraintVertical_bias="0.75" />

        <LinearLayout
            android:id="@+id/dealer_cards_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_display_height"
            android:background="@drawable/cards_border"
            android:gravity="center_horizontal"

            android:orientation="horizontal"

            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/center_text_section"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.115">

            <ImageView
                android:id="@+id/dealer_cards_1"

                android:layout_width="@dimen/card_display_width"
                android:layout_height="match_parent"/>

            <ImageView
                android:id="@+id/dealer_cards_2"

                android:layout_width="@dimen/card_display_width"
                android:layout_height="match_parent"
                android:layout_marginStart="-40dp"/>

            <ImageView
                android:id="@+id/dealer_cards_3"

                android:layout_width="@dimen/card_display_width"
                android:layout_height="match_parent"
                android:layout_marginStart="-40dp"/>

            <ImageView
                android:id="@+id/dealer_cards_4"

                android:layout_width="@dimen/card_display_width"
                android:layout_height="match_parent"
                android:layout_marginStart="-40dp"/>

            <ImageView
                android:id="@+id/dealer_cards_5"

                android:layout_width="@dimen/card_display_width"
                android:layout_height="match_parent"
                android:layout_marginStart="-40dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/game_status_text"
            android:text="Place your bets!"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/center_text_section"
            app:layout_constraintTop_toBottomOf="@id/dealer_cards_layout"/>

        <LinearLayout
            android:id="@+id/center_text_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/game_buttons_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/cards_left_text"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>
                    <TextView
                        android:text="@string/current_count_text"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/cardsLeftInDrawPile"
                        android:text="52"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>
                    <TextView
                        android:id="@+id/currentDeckCount"
                        android:text="+3"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/game_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/player_cards_layout"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/drawPlayerCard"


                android:layout_weight="1"
                android:layout_margin="20dp"

                android:minWidth="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hit_button_value" />

            <Button
                android:id="@+id/playerStopDraw"

                android:layout_weight="1"
                android:layout_margin="20dp"

                android:minWidth="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stand_button_value" />
            <Button
                android:id="@+id/newRound"

                android:layout_weight="1"
                android:layout_margin="20dp"

                android:minWidth="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_round_button_value" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.25"
            android:gravity="center"
            android:text="Player Cards"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/player_cards_layout"
            app:layout_constraintStart_toStartOf="@id/player_cards_layout"
            app:layout_constraintEnd_toEndOf="@id/player_cards_layout"
            app:layout_constraintTop_toTopOf="@id/player_cards_layout"
            app:layout_constraintVertical_bias="0.75"/>

        <LinearLayout
            android:id="@+id/player_cards_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_display_height"

            android:padding="10dp"
            android:background="@drawable/cards_border"

            android:gravity="center_horizontal"

            app:layout_constraintTop_toBottomOf="@id/dealer_cards_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            app:layout_constraintVertical_bias="0.8">

            <ImageView
                android:id="@+id/player_cards_1"

                android:layout_width="@dimen/card_display_width"
                android:layout_height="match_parent">
            </ImageView>
            <ImageView
                android:id="@+id/player_cards_2"

                android:layout_marginStart="-40dp"
                android:layout_width="@dimen/card_display_width"
                android:layout_height="match_parent">
            </ImageView>
            <ImageView
                android:id="@+id/player_cards_3"

                android:layout_marginStart="-40dp"
                android:layout_width="@dimen/card_display_width"
                android:layout_height="match_parent">
            </ImageView>
            <ImageView
                android:id="@+id/player_cards_4"

                android:layout_marginStart="-40dp"
                android:layout_width="@dimen/card_display_width"
                android:layout_height="match_parent">
            </ImageView>

            <ImageView
                android:id="@+id/player_cards_5"

                android:layout_marginStart="-40dp"
                android:layout_width="@dimen/card_display_width"
                android:layout_height="match_parent">
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/score_trackers"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/player_cards_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:src="@drawable/baseline_attach_money_white_36dp">
            </ImageView>
            <TextView
                android:id="@+id/playerMoney"
                android:text="9999"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"/>
            <TextView
                android:text="@string/current_bet_text"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_width="70dp"
                android:layout_height="match_parent"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:src="@drawable/baseline_attach_money_white_36dp">
            </ImageView>
            <TextView
                android:id="@+id/currentBet"
                android:text="9999"
                android:textColor="@color/white"
                android:textAlignment="textStart"
                android:gravity="center"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_marginStart="20dp"
                android:id="@+id/lower_bet_button"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_keyboard_arrow_down_white_48dp"/>
            <Button
                android:id="@+id/raise_bet_button"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@drawable/baseline_keyboard_arrow_up_white_48dp"/>

        </LinearLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>